k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: towers-ingress
  namespace: towers
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - towers.bevsoft.com
      secretName: bevsoft-wildcard-tls
  rules:
    - host: towers.bevsoft.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
